--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -7,25 +7,25 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #8ECAE6   ;
-  --secondary-color: #FFB703 ;
-  --accent1-color: #FB8500;
-  --accent2-color: white;
+  --primary-color: #427AA1   ;
+  --secondary-color: #679436 ;
+  --accent1-color: #064789;
+  --accent2-color: #EBF2FA;
 
   /* change the values below to your chosen font(s) */
   --heading-font: 'Mooli', sans-serif;
   --paragraph-font: 'Patrick Hand', cursive;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #8ECAE6;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #8ECAE6; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #8ECAE6  ;
-  --nav-link-color: #8ECAE6;
-  --nav-background-color: #FB8500;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #8ECAE6;
+  --headline-color-on-white: rgb(32, 33, 36);  /* headlines on a white background */ 
+  --headline-color-on-color: #EBF2FA; /* headlines on a colored background */ 
+  --paragraph-color-on-white: rgb(32, 33, 36); /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #EBF2FA; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #427AA1  ;
+  --nav-link-color: #427AA1;
+  --nav-background-color: #064789;
+  --nav-hover-link-color: #EBF2FA;
+  --nav-hover-background-color: #427AA1;
 }
 
 
