--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -18,14 +18,14 @@ Fonts are separated by a & */
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: rgb(32, 33, 36);  /* headlines on a white background */ 
-  --headline-color-on-color: #EBF2FA; /* headlines on a colored background */ 
+  --headline-color-on-color: rgb(32, 33, 36); /* headlines on a colored background */ 
   --paragraph-color-on-white: rgb(32, 33, 36); /* paragraph text on a white background */ 
   --paragraph-color-on-color: #EBF2FA; /* paragraph text on a colored background */ 
   --paragraph-background-color: #427AA1  ;
-  --nav-link-color: #427AA1;
-  --nav-background-color: #064789;
+  --nav-link-color: #EBF2FA;
+  --nav-background-color: #679436;
   --nav-hover-link-color: #EBF2FA;
-  --nav-hover-background-color: #427AA1;
+  --nav-hover-background-color: #81a759;
 }
 
 
