--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -3,7 +3,7 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a & */
-@import url('https://fonts.googleapis.com/css2?family=Mooli&family=Patrick+Hand&family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mooli&family=Patrick+Hand&family=Raleway&family=Roboto:wght@100&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
@@ -13,8 +13,8 @@ Fonts are separated by a & */
   --accent2-color: #EBF2FA;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: 'Mooli', sans-serif;
-  --paragraph-font: 'Patrick Hand', cursive;
+  --heading-font: 'Raleway', sans-serif;
+  --paragraph-font: 'Raleway', cursive;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: rgb(32, 33, 36);  /* headlines on a white background */ 
