--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Mooli&family=Patrick+Hand&family=Raleway&family=Roboto:wght@100&display=swap');
+/**
+  --heading-font: 'Raleway', sans-serif;
+  --paragraph-font: 'Raleway', cursive;
+**/
+
 #content{
     max-width: 1600px;
     margin: 0 auto;
@@ -6,6 +12,7 @@
 nav a {
     text-align: center;
     text-decoration: none;
+    padding: 35px;
 }
 
 #hero-msg h1, #hero-msg h4{
@@ -29,11 +36,16 @@ main section{
 body {
     background-color: #EBF2FA;
     color:#427AA1;
+    font-family: 'Raleway', 'sans serif';
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
 
 header {
     background-color: #EBF2FA;
     color: #427AA1;
+    font-family: 'Raleway', sans-serif;
 }
 
 nav a:hover {
@@ -45,23 +57,39 @@ nav a:hover {
     background-color: #EBF2FA;
     color: #427AA1;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
+
 .book:hover, .join:hover {
     background-color: #EBF2FA;
     color: #427AA1;
 }
+
 .msg {
     background-color: #EBF2FA;
     color: #427AA1;
+    line-height: 1.5em;
+    padding: 35px;
 }
 
 footer {
     background-color: #EBF2FA;
     color: #427AA1;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 
 .home-title{
     color: #427AA1;
+    font-size: 2em;
+    margin-top: 10px;
+}
+
+h2 {
+    margin: 0;
 }
 
 h4 {
@@ -70,10 +98,13 @@ h4 {
 
 .msg h2 {
     color: #427AA1;
+    font-family: 'Raleway', sans-serif;
 }
 
 .msg p{
     color: #427AA1;
+    font-size: 0.8em;
+    padding-bottom: 15px;
 }
 
 footer a{
@@ -89,6 +120,7 @@ footer a:hover {
 
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 
 .logo {
@@ -97,4 +129,24 @@ footer a:hover {
 
 #hero-img{
     width: 100%;
+}
+
+#logo_link {
+    padding-top: 5px;
+}
+
+footer .social img {
+    padding-top: 15px;
+}
+
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+
+.card-img {
+    border: 10px solid #d9c2a3;
+}
+
+main section img {
+    box-sizing: border-box;
 }
