--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -9,28 +9,110 @@
     margin: 0 auto;
 }
 
+header {
+    display: grid;
+    grid-template-columns: 150px auto;
+    background-color: #00000060;
+    color: #EBF2FA;
+    font-family: 'Raleway', sans-serif;
+}
+
 nav a {
     text-align: center;
     text-decoration: none;
     padding: 35px;
+    color: #EBF2FA;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+
 }
 
 #hero-msg h1, #hero-msg h4{
     text-align: center;
 }
 
+#hero-img{
+    width: 100%;
+}
+
 .button-box{
     text-align: center;
+}
+
+.home-title{
+    color: #EBF2FA;
+    font-size: 2em;
+    margin-top: 10px;
 }
 
 main section{
     text-align: center;
 }
 
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+
+.card-img, .mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #1d3647;
+}
+
+.rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
 #background {
     height: 725px;
+    background-color: #427AA1;
+    color: #427AA1;
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+
+.msg {
     background-color: #EBF2FA;
     color: #427AA1;
+    line-height: 1.5em;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #1d3647;
 }
      
 body {
@@ -42,20 +124,14 @@ body {
     padding: 0;
 }
 
-header {
-    background-color: #EBF2FA;
-    color: #427AA1;
-    font-family: 'Raleway', sans-serif;
-}
-
 nav a:hover {
     background-color: #d3d4d4;
     color: rgb(32, 33, 36);
 }
 
 .book, .join{
-    background-color: #EBF2FA;
-    color: #427AA1;
+    background-color: #427AA1;
+    color: #EBF2FA;
     text-decoration: none;
     font-size: 18px;
     padding: 15px 30px;
@@ -68,24 +144,14 @@ nav a:hover {
     color: #427AA1;
 }
 
-.msg {
-    background-color: #EBF2FA;
-    color: #427AA1;
-    line-height: 1.5em;
-    padding: 35px;
-}
-
 footer {
     background-color: #EBF2FA;
     color: #427AA1;
     padding: 25px 50px;
     margin-top: 200px;
-}
-
-.home-title{
-    color: #427AA1;
-    font-size: 2em;
-    margin-top: 10px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 h2 {
@@ -93,7 +159,7 @@ h2 {
 }
 
 h4 {
-    color: #427AA1;
+    color: #EBF2FA;
 }
 
 .msg h2 {
@@ -127,12 +193,10 @@ footer a:hover {
     width: 80px;
 }
 
-#hero-img{
-    width: 100%;
-}
-
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 footer .social img {
@@ -145,8 +209,58 @@ footer .social img {
 
 .card-img {
     border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
 }
 
 main section img {
     box-sizing: border-box;
 }
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
+            
