--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -222,6 +222,85 @@ main section img {
     box-sizing: border-box;
 }
 
+.page_2_nav{
+    background-color: #427AA1;
+}
+
+#hero2 {
+    display: grid;
+    grid-template-columns: 1fr 2fr 3fr 1fr;
+    margin-top: -100px; 
+}
+
+#hero-box2 {
+    grid-column: 1/5;
+    grid-row: 1/4;
+    z-index: -1;
+}
+
+#hero-msg2 {
+    grid-column: 3/4;
+    grid-row: 2/3;
+    margin-top: 100px;
+
+}
+
+#hero-msg2 h1, #hero-msg h4{
+    text-align: center;
+}
+
+.home-title2{
+    color: #EBF2FA;
+    font-size: 3em;
+    margin-top: 10px;
+}
+
+#hero-img2{
+    width: 100%;
+}
+
+.rivers_cards{
+    background-color:#427AA1;
+}
+
+.info_card{
+    background-color: white;
+    margin: 3rem;
+    padding: 2rem;
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    grid-template-rows: repeat(4, auto);
+    box-shadow: 5px 5px 10px #9a9c95;
+}
+
+.river_name{
+    grid-column: 1/2;
+    grid-row: 1/2;
+    font-size: 2rem;
+}
+
+.river_p{
+    grid-column: 1/2;
+    grid-row: 2/4;
+    font-size: 1rem;
+    padding-right: 1.5rem;
+    padding-left: 2rem;
+}
+
+.river_picture{
+    grid-column: 3/5;
+    grid-row: 1/4;
+    width: 100%;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.button-box2{
+    text-align: center;
+    grid-row: 4/5;
+    grid-column: 1/5;
+    margin: 2rem 2rem 0.5rem 2rem;
+}
+
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
