--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -301,6 +301,89 @@ main section img {
     margin: 2rem 2rem 0.5rem 2rem;
 }
 
+form {
+    /* Center the form on the page */
+    margin: 0 auto;
+    width: 400px;
+    /* Form outline */
+    padding: 1em;
+    border: 1px solid #ccc;
+    border-radius: 1em;
+  }
+  
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  form li + li {
+    margin-top: 1em;
+  }
+  
+  label {
+    /* Uniform size & alignment */
+    display: block;
+    width: 90px;
+    /* text-align: right; */
+  }
+  
+  input,
+  textarea {
+    /* To make sure that all text fields have the same font settings
+       By default, textareas have a monospace font */
+    font: 1em sans-serif;
+  
+    /* Uniform text field size */
+    width: 100%;
+    box-sizing: border-box;
+  
+    /* Match form field borders */
+    border: 1px solid #999;
+
+    padding: 0.5rem;
+  }
+  
+  input:focus,
+  textarea:focus {
+    /* Additional highlight for focused elements */
+    border-color: #000;
+  }
+  
+  textarea {
+    /* Align multiline text fields with their labels */
+    vertical-align: top;
+  
+    /* Provide space to type some text */
+    height: 5em;
+  }
+  
+  .button {
+    /* Align buttons with the text fields */
+    padding-left: 90px; /* same size as the label elements */
+  }
+  
+  button {
+    /* This extra margin represent roughly the same space as the space
+       between the labels and their text fields */
+    margin-left: 0.5em;
+  }
+
+  #feedback {
+    background-color: antiquewhite;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: .5em;
+    /* make this element invisible until we are ready for it */
+    display: none;      
+}
+.moveDown {
+    margin-top: 3em;
+}
+  
+
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
@@ -326,6 +409,19 @@ main section img {
         font-size: 25px;
         color: #6f7364;
     }
+    #hero2 {
+        margin-top: 0;
+    }
+    #hero-msg2 {
+        margin-top: 0;
+    }
+    #hero-msg2 h4 {
+        display: none;
+    }
+    .home-title2 {
+        font-size: 25px;
+        color: #6f7364;
+    }
     .rivers-card, .camping-card, .rapids-card { 
         margin: 50px auto;
         width: 60%;
@@ -341,5 +437,47 @@ main section img {
     footer {
         margin-top: 25px;
     }
+    .rivers_cards{
+        background-color:#427AA1;
+    }
+    
+    .info_card{
+        background-color: white;
+        margin: 3rem;
+        padding: 2rem;
+        display: grid;
+        grid-template-columns: repeat(2, auto);
+        grid-template-rows: repeat(3, auto);
+        box-shadow: 5px 5px 10px #9a9c95;
+    }
+    
+    .river_name{
+        grid-column: 1/2;
+        grid-row: 1/2;
+        font-size: 2rem;
+    }
+    
+    .river_p{
+        grid-column: 1/3;
+        grid-row: 2/3;
+        font-size: 1rem;
+        padding-right: 1.5rem;
+        padding-left: 2rem;
+    }
+    
+    .river_picture{
+        grid-column: 2/3;
+        grid-row: 1/2;
+        width: 100%;
+        box-shadow: 5px 5px 10px #6f7364;
+    }
+    
+    .button-box2{
+        text-align: center;
+        grid-row: 3/4;
+        grid-column: 1/3;
+        margin: 2rem 2rem 0.5rem 2rem;
+    }
+    
 }
             
