--- a/final/styles/style.css
+++ b/final/styles/style.css
@@ -2,20 +2,40 @@
 body{
     margin: 0;
     font-family: 'saira', 'sans serif';
+    background-color: #e6e6e6;
 }
-header {
+
+
+
+.index{
+    background-color: #c4c3c3;
+}
+
+.header-bar{
     display: grid;
     grid-template-columns: 20rem auto;
-    background-color: #AF6046;
+    /* background-color: #af6046d2; */
+    background-color:#a8a8a870;
     color: #EBF2FA;
+    box-shadow: 0 0 10px #0000009c;
+    z-index: 9999;
+    position: absolute;
+    width: 100%;
 }
+
+
 
 .home-header {
     display: grid;
     grid-template-columns: auto;
-    background-color: #AF6046;
+    background-color: #a8a8a870;
     color: #EBF2FA;
-    height: 2rem;
+    height: 65px;
+    box-shadow: 5px 5px 10px #0000009c;
+    z-index: 9999;
+    position: absolute;
+    width: 100%;
+    
 }
 
 nav a {
@@ -26,17 +46,17 @@ nav a {
 }
 
 .home-header nav a {
-    text-align: center;
+    /* text-align: center; */
     text-decoration: none;
-    padding: 0.5rem;
-    color: #EBF2FA;
-    font-size: 0.75rem;
+    /* padding: 0.5rem; */
+    /* color: #EBF2FA; */
 }
 
 nav {
     display: flex;
     justify-content: space-around;
     width:100%;
+    
 }
 
 .logo {
@@ -61,6 +81,12 @@ nav a:hover {
     color:#EBF2FA;
     background-color: #2d3168;
     font-size: 1rem;
+    box-shadow: 0px 0px 10px #0000009c;
+}
+
+.button:hover{
+    background-color: #363b78;
+    color: white;
 }
 
 /* header {
@@ -115,13 +141,17 @@ nav a:hover {
 /* footer */
 
 footer {
-    background-color: #EBF2FA;
+    background-color: #c4c3c3;
     color: #427AA1;
     padding: 25px 50px;
     margin-top: 200px;
     display: flex;
     justify-content: space-around;
     align-items: center;
+}
+
+.rules footer, .about footer{
+    background-color: #e6e6e6;
 }
 
 footer .social img {
@@ -176,12 +206,13 @@ footer .social img {
     margin: 0;
     padding: 0 2rem;
     background-color: #c6c5c3;
-    box-shadow: 5px 5px 10px #6f7364;
+    /* box-shadow: 5px 5px 10px #6f7364; */
 }
 
-.intro-block h1{
+.intro-block h2{
     width: 100%;
     text-align: center;
+    color: #534c58;
 }
 
 hr{
@@ -213,7 +244,14 @@ hr{
     display: grid;
     grid-template-columns: 1fr 1fr 2fr;
     /* grid-template-rows: 3rem auto 3rem; */
-    box-shadow: 5px 5px 10px #6f7364;
+    box-shadow: 0 -2px 10px 7px #00000070;
+    background-color: #e6e6e6;
+}
+
+.about .menu-block{
+    background-color: white;
+    margin: -10rem 0 0 0;
+    position: absolute;
 }
 
 .menu-block div{
@@ -222,7 +260,6 @@ hr{
     text-align: left;
     margin: 0;
     padding: 1rem;
-    background-color: #c4c3c3;
     font-size: 1.25rem;
     display: grid;
     grid-template-columns: 1fr auto 1fr;
@@ -230,10 +267,11 @@ hr{
 
 }
 
+
 .menu-block p{
     text-align: left;
     text-decoration: none;
-    padding: 1rem;
+    padding: 2rem;
     margin: 0;
     grid-column: 1/4;
 }
@@ -257,7 +295,7 @@ hr{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     /* grid-template-rows: 3rem auto 3rem; */
-    box-shadow: 5px 5px 10px #6f7364;
+    box-shadow: 0 0 10px 5px #00000070;
 }
 
 .about-page .about-block{
@@ -265,7 +303,7 @@ hr{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     /* grid-template-rows: 3rem auto 3rem; */
-    box-shadow: 5px 5px 10px #6f7364;
+    box-shadow: 0 0 10px 5px #00000070;
 }
 
 .about-block div{
@@ -308,4 +346,268 @@ hr{
     grid-row: 2/3;
     width: 100%;
     align-self: center;
+}
+
+.about-block div{
+    grid-column: 2/3;
+    display: grid;
+}
+
+.about-block .button{
+    z-index: 1;
+    grid-row: 2/3;
+}
+
+.about-block .about-title{
+    z-index: 1;
+}
+
+.about-page .about-block div{
+    grid-column: 1/4;
+    text-align: center;
+    display: flex;
+}
+
+.about-block h1{
+    margin: auto auto;
+    color: white;
+}
+
+/* instructions page */
+
+.rules-page{
+    background-color: white;
+    display: grid;
+    box-shadow: 0 0 10px 5px #00000070;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 3;
+    padding: 1rem 2rem;
+    position: absolute;
+    margin: -4rem 0 0 0;
+}
+
+.top-paragraph{
+    grid-column: 1/3;
+    grid-row: 1/2;
+}
+
+.middle-paragraph{
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+
+.bottom-paragraph{
+    grid-column: 1/3;
+    grid-row: 3/4;
+}
+
+.middle-img{
+    grid-column: 2/3;
+    grid-row: 2/3;
+    height: 200px;
+    align-self: center;
+    margin: 0 auto;
+}
+
+.cards-banner{
+    width: 80%;
+    margin: 0 auto;
+    padding: 0;
+}
+
+.cards-banner img{
+    margin: 0 auto;
+    width: 100%;
+
+}
+
+
+@media screen and (max-width: 900px) {
+    footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    .intro-block{
+        font-size: 8px;
+    }
+    .button{
+        font-size: 14px;
+    }
+    
+    .about-block{
+        margin: 1rem 0;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        /* grid-template-rows: 3rem auto 3rem; */
+        box-shadow: 5px 5px 10px #6f7364;
+    }
+    .about-block div{
+        grid-column: 2/3;
+        grid-row: 2/3;
+        margin: 0;
+        padding: 1rem;
+        background-color: #c4c3c3;
+        font-size: 1.25rem;
+        display: grid;
+        grid-template-columns: 1fr auto 1fr;
+        grid-template-rows: 1fr auto;
+        
+    }
+    .about-block a{
+        text-align: left;
+        text-decoration: none;
+        padding: 1rem;
+        margin: auto 0;
+        grid-column: 2/3;
+        height: 1.5rem;
+    }
+    .about-img1{
+        grid-column: 1/2;
+        grid-row: 1/2;
+        width: 100%;
+        align-self: center;
+    }
+    .about-img2{
+        grid-column: 2/3;
+        grid-row: 1/2;
+        width: 100%;
+        align-self: center;
+    }
+    .about-img3{
+        grid-column: 1/2;
+        grid-row: 2/3;
+        width: 100%;
+        align-self: center;
+    }
+
+    .menu-block{
+        margin: 5rem 0;
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1;
+        /* grid-template-rows: 3rem auto 3rem; */
+        box-shadow: 5px 5px 10px #6f7364;
+        font-size: 14px;
+    }
+    .menu-block div{
+        grid-row: 2/3;
+        grid-column: 1/2;
+        text-align: left;
+        margin: 0;
+        padding: 1rem;
+        background-color: #c4c3c3;
+        font-size: 14px;
+        display: grid;
+        grid-template-rows: 1fr auto;
+        grid-template-columns: 1;
+    
+    }
+    .menu-block p{
+        text-align: left;
+        text-decoration: none;
+        padding: 1rem;
+        margin: 0;
+        grid-row: 1/2;
+        grid-column: 1/2;
+    }
+    .menu-block a{
+        text-align: left;
+        text-decoration: none;
+        padding: 1rem;
+        grid-row: 2/3;
+        grid-column: 1/2;
+
+    }
+    .menu-img{
+        grid-row: 1/2;
+        grid-column: 1/2;
+        width: 100%;
+        align-self: center;
+    }
+    /* #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    #hero2 {
+        margin-top: 0;
+    }
+    #hero-msg2 {
+        margin-top: 0;
+    }
+    #hero-msg2 h4 {
+        display: none;
+    }
+    .home-title2 {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+    .rivers_cards{
+        background-color:#427AA1;
+    }
+    
+    .info_card{
+        background-color: white;
+        margin: 3rem;
+        padding: 2rem;
+        display: grid;
+        grid-template-columns: repeat(2, auto);
+        grid-template-rows: repeat(3, auto);
+        box-shadow: 5px 5px 10px #9a9c95;
+    }
+    
+    .river_name{
+        grid-column: 1/2;
+        grid-row: 1/2;
+        font-size: 2rem;
+    }
+    
+    .river_p{
+        grid-column: 1/3;
+        grid-row: 2/3;
+        font-size: 1rem;
+        padding-right: 1.5rem;
+        padding-left: 2rem;
+    }
+    
+    .river_picture{
+        grid-column: 2/3;
+        grid-row: 1/2;
+        width: 100%;
+        box-shadow: 5px 5px 10px #6f7364;
+    }
+    
+    .button-box2{
+        text-align: center;
+        grid-row: 3/4;
+        grid-column: 1/3;
+        margin: 2rem 2rem 0.5rem 2rem;
+    }
+    */
 }
