--- a/final/styles/style.css
+++ b/final/styles/style.css
@@ -5,18 +5,12 @@ body{
     background-color: #e6e6e6;
 }
 
-
-
-.index{
-    background-color: #c4c3c3;
-}
-
 .header-bar{
     display: grid;
     grid-template-columns: 20rem auto;
     /* background-color: #af6046d2; */
     background-color:#a8a8a870;
-    color: #EBF2FA;
+    color: #e6e6e6;
     box-shadow: 0 0 10px #0000009c;
     z-index: 9999;
     position: absolute;
@@ -209,7 +203,7 @@ footer .social img {
 .intro-block{
     margin: 0;
     padding: 0 2rem;
-    background-color: #c6c5c3;
+    background-color: #e6e6e6;
     /* box-shadow: 5px 5px 10px #6f7364; */
 }
 
@@ -244,12 +238,14 @@ hr{
 /* join us card */
 
 .menu-block{
-    margin: 5rem 0;
+    width: 85%;
+    margin: 5rem auto;
     display: grid;
-    grid-template-columns: 1fr 1fr 2fr;
+    grid-template-columns: 1fr 1fr 1fr;
     /* grid-template-rows: 3rem auto 3rem; */
-    box-shadow: 0 -2px 10px 7px #00000070;
-    background-color: #e6e6e6;
+    /* box-shadow: 0 -2px 10px 7px #00000070; */
+    box-shadow: rgba(0, 0, 0, 0.44) 0px 0px 10px 5px;
+    background-color: white;
 }
 
 .about .menu-block{
@@ -292,10 +288,15 @@ hr{
     grid-row: 2/3;
     width: 100%;
     align-self: center;
+    margin-right: 2rem;
 }
-
+.index div.about-block{
+    /* margin: 2rem; */
+    width: 85%;
+    margin: 3rem auto;
+}
 .about-block{
-    margin: 5rem 0;
+    /* margin: 5rem 0; */
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     /* grid-template-rows: 3rem auto 3rem; */
@@ -314,7 +315,7 @@ hr{
     grid-column: 1/3;
     grid-row: 1/4;
     text-align: left;
-    margin: 0;
+    /* margin: 0; */
     padding: 1rem;
     background-color: #c4c3c3;
     font-size: 1.25rem;
@@ -417,11 +418,16 @@ hr{
     width: 80%;
     margin: 0 auto;
     padding: 0;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
 }
 
 .cards-banner img{
     margin: 0 auto;
     width: 100%;
+    grid-column: 1/2;
+    grid-row: 1/2;
 
 }
 
@@ -429,6 +435,13 @@ hr{
     position: absolute;
 }
 
+.cards-banner h1{
+    grid-column: 1/2;
+    grid-row: 1/2;
+    justify-self: center;
+    align-self: center;
+    font-size: 3rem;
+}
 
 @media screen and (max-width: 900px) {
     footer {
@@ -445,6 +458,10 @@ hr{
         font-size: 14px;
     }
 
+    div .about-block{
+        margin: 2rem;
+    }
+
     .about-block{
         margin: 1rem 0;
         display: grid;
@@ -455,7 +472,7 @@ hr{
     .about-block div{
         grid-column: 2/3;
         grid-row: 2/3;
-        margin: 0;
+        margin: 2rem;
         padding: 1rem;
         background-color: #c4c3c3;
         font-size: 1.25rem;
@@ -493,6 +510,7 @@ hr{
 
     .menu-block{
         margin: 5rem 0;
+        width: 85%;
         display: grid;
         grid-template-rows: 1fr 1fr;
         grid-template-columns: 1;
@@ -506,7 +524,7 @@ hr{
         text-align: left;
         margin: 0;
         padding: 1rem;
-        background-color: #c4c3c3;
+        background-color: white;
         font-size: 14px;
         display: grid;
         grid-template-rows: 1fr auto;
