--- a/final/styles/site-plan.css
+++ b/final/styles/site-plan.css
@@ -2,17 +2,18 @@
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
 @import url('https://fonts.googleapis.com/css2?family=Mooli&family=Patrick+Hand&family=Raleway&family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Exo&family=Orbitron&family=Rajdhani&family=Saira&display=swap');/* header and nav */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #002152   ;
-  --secondary-color: #AF6046 ;
-  --accent1-color: #73695F;
-  --accent2-color: #B8B8B8;
+  --primary-color: #2d3168   ;
+  --secondary-color: #a8a8a870 ;
+  --accent1-color: #AF6046;
+  --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "raleway";
-  --paragraph-font: "raleway", sans-serif;
+  --heading-font: "saira";
+  --paragraph-font: "saira", sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #1D1A05;  /* headlines on a white background */ 
@@ -21,7 +22,7 @@ Fonts are separated by a | */
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
   --paragraph-background-color: #73695F  ;
   --nav-link-color: white;
-  --nav-background-color: #002152;
+  --nav-background-color: #2d3168;
   --nav-hover-link-color: white;
   --nav-hover-background-color: #1e447d;
 }
