updated footer font color

--- a/final/styles/style.css
+++ b/final/styles/style.css
@@ -136,7 +136,7 @@ nav a:hover {
 
 footer {
     background-color: #e6e6e6;
-    color: #427AA1;
+    color: #234b67;
     padding: 25px 50px;
     display: flex;
     justify-content: space-around;
